<resources>
    <string name="app_name">COMP2160 Project</string>
    <string name="compass_text">Compass</string>
    <string name="planets_list_text">Planets</string>
    <string name="azimuth">Azimuth</string>
    <string name="elevation">Elevation</string>
    <string name="calc_az_el">Calculate Az/El</string>
    <string name="rt_ascen">Right Ascension</string>
    <string name="longitude_edittext">Longitude (E/W)</string>
    <string name="latitude_edittext">Latitude (N/S)</string>
    <string name="enter_the_lat_and_long_of_the_observer">Enter the Lat and Long of the observer</string>
    <string name="declination_text">Declination</string>
    <string name="item_btn">More Info</string>
    <string name="search_for_planet">  Search for planet</string>
    <string name="app_title">Stargazer</string>
</resources>